--- a/card-game/src/css/main.css
+++ b/card-game/src/css/main.css
@@ -609,3 +609,23 @@ textarea:focus, input:focus {
       -o-transition: 0.2s;
       border: 2px solid rgba(51, 122, 183, 0.8);
       box-shadow: 0px 0px 4px 2px rgba(51, 122, 183, 0.5); }
+
+/* line 791, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.chip-outer-wrapper {
+  border-radius: 90px;
+  border: solid 1px black;
+  position: relative;
+  height: 60px;
+  width: 60px; }
+  /* line 798, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .chip-outer-wrapper .chip-inner-wrapper {
+    border-radius: 90px;
+    border: solid 1px black;
+    position: absolute;
+    height: 45px;
+    width: 45px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
