--- a/card-game/src/css/main.css
+++ b/card-game/src/css/main.css
@@ -629,3 +629,57 @@ textarea:focus, input:focus {
     bottom: 0;
     left: 0;
     right: 0; }
+
+/* line 818, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip {
+  margin: .5em;
+  font-size: 1.2em;
+  position: relative;
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 5em;
+  height: 5em;
+  background: #555;
+  border-radius: 50%;
+  position: relative;
+  border: .4em dashed white;
+  transition: all .5s ease;
+  backface-visibility: hidden; }
+  /* line 835, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .pokerchip .chip-text {
+    text-align: center;
+    color: white;
+    margin: auto;
+    top: 30%;
+    position: relative;
+    right: 0;
+    left: 0;
+    bottom: 0; }
+
+/* line 848, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.red {
+  background: #DD4631; }
+
+/* line 852, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.blue {
+  background: #317DDD; }
+
+/* line 858, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.flat {
+  box-shadow: 0 0 0 .2em #fff; }
+
+/* line 862, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.iso {
+  transform: perspective(3000px) rotateX(55deg) rotateZ(-40deg);
+  box-shadow: -1px 1px 0px #555, -2px 2px 0px #555, -3px 3px 0px #555, -4px 4px 0px #555, -5px 5px 0px #555, -6px 6px 10px #555; }
+
+/* line 873, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.flat:hover {
+  transform: rotate(20deg);
+  cursor: pointer; }
+
+/* line 878, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.pokerchip.iso:hover {
+  transform: perspective(3000px) rotateX(20deg) rotateZ(-40deg) translateZ(0.5em); }
