--- a/card-game/src/css/main.scss
+++ b/card-game/src/css/main.scss
@@ -810,3 +810,71 @@ textarea:focus, input:focus{
 }
 
 
+
+
+
+
+
+.pokerchip{
+  margin:.5em;
+  font-size:1.2em;
+  position:relative;
+  display:inline-block;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
+  width:5em;
+  height:5em;
+  background:#555;
+  border-radius:50%;
+  position:relative;
+  border:.4em dashed white;
+  transition:all .5s ease;
+  backface-visibility:hidden;
+
+  .chip-text {
+    text-align: center;
+
+    color: white;
+    margin: auto;
+    top: 30%;
+    position: relative;
+    right: 0;
+    left: 0;
+    bottom: 0;
+  }
+}
+
+.pokerchip.red{
+  background:#DD4631;
+}
+
+.pokerchip.blue{
+  background:#317DDD;
+}
+
+
+
+.pokerchip.flat{
+  box-shadow:0 0 0 .2em #fff;
+}
+
+.pokerchip.iso{
+  transform: perspective(3000px) rotateX(55deg) rotateZ(-40deg);
+  box-shadow:
+    -1px 1px 0px #555,
+    -2px 2px 0px #555,
+    -3px 3px 0px #555,
+    -4px 4px 0px #555,
+    -5px 5px 0px #555,
+    -6px 6px 10px #555;
+}
+
+.pokerchip.flat:hover{
+  transform:rotate(20deg);
+  cursor: pointer;
+}
+
+.pokerchip.iso:hover{
+  transform: perspective(3000px) rotateX(20deg) rotateZ(-40deg) translateZ(.5em);
+}
